Bug 161860 - information bar should not use menuitem separators
Summary: information bar should not use menuitem separators
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.12.2
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-05-09 20:17 UTC by Huynh Huu Long
Modified: 2008-05-10 15:37 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
side effect of using a menu separator (7.55 KB, image/png)
2008-05-09 20:21 UTC, Huynh Huu Long
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Huynh Huu Long 2008-05-09 20:17:18 UTC
Version:           1.0.99 (using 4.00.71 (KDE 4.0.71 (Alpha1), compiled sources)
Compiler:          gcc
OS:                Linux (i686) release 2.6.24-ARCH

Currently MenuItem::Separator is (mis)used as Seperator in the information bar. KSeparator or similar should be used instead to avoid unexpected side effects (see screenshot for an example). As Oxygen is able to style KSeparator for a while now, it is certainly not a bad idea to change this what also makes the code one hack cleaner :)
Comment 1 Huynh Huu Long 2008-05-09 20:21:39 UTC
Created attachment 24686 [details]
side effect of using a menu separator
Comment 2 Peter Penz 2008-05-09 20:34:04 UTC
Ah, thanks for the hint! I was not aware that Oxygen can draw KSeparator now properly :-) I'll fix this ASAP.
Comment 3 Peter Penz 2008-05-10 15:37:34 UTC
SVN commit 806201 by ppenz:

Don't (mis)use MenuItem::Separator for the information bar, as Oxygen is able to style KSeperator quite some time already.

BUG: 161860

 M  +3 -35     infosidebarpage.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=806201