Don't (mis)use MenuItem::Separator for the information bar, as Oxygen is able to style KSeperator quite some time already.

BUG: 161860

svn path=/trunk/KDE/kdebase/apps/; revision=806201