src/infosidebarpage.cpp
@@ -39,7 +39,6 @@
 #include <QPainter>
 #include <QPixmap>
 #include <QResizeEvent>
-#include <QStyleOptionMenuItem>
 #include <QTimer>
 #include <QVBoxLayout>
 
@@ -47,37 +46,6 @@
 #include "metadatawidget.h"
 #include "metatextlabel.h"
 #include "pixmapviewer.h"
-
-class InfoSeparator : public QWidget
-{
-public:
-    InfoSeparator(QWidget* parent);
-    virtual ~InfoSeparator();
-
-protected:
-    virtual void paintEvent(QPaintEvent* event);
-};
-
-InfoSeparator::InfoSeparator(QWidget* parent) :
-    QWidget(parent)
-{
-    setMinimumSize(0, 8);
-}
-
-InfoSeparator::~InfoSeparator()
-{
-}
-
-void InfoSeparator::paintEvent(QPaintEvent* event)
-{
-    Q_UNUSED(event);
-    QPainter painter(this);
-
-    QStyleOptionMenuItem option;
-    option.initFrom(this);
-    option.menuItemType = QStyleOptionMenuItem::Separator;
-    style()->drawControl(QStyle::CE_MenuItem, &option, &painter, this);
-}
 
 InfoSidebarPage::InfoSidebarPage(QWidget* parent) :
     SidebarPage(parent),
@@ -123,12 +91,12 @@ InfoSidebarPage::InfoSidebarPage(QWidget* parent) :
     m_metaTextLabel->setMinimumWidth(spacing);
 
     layout->addWidget(m_nameLabel);
-    layout->addWidget(new InfoSeparator(this));
+    layout->addWidget(new KSeparator(this));
     layout->addWidget(m_preview);
-    layout->addWidget(new InfoSeparator(this));
+    layout->addWidget(new KSeparator(this));
     if (m_metaDataWidget != 0) {
         layout->addWidget(m_metaDataWidget);
-        layout->addWidget(new InfoSeparator(this));
+        layout->addWidget(new KSeparator(this));
     }
     layout->addWidget(m_metaTextLabel);
 
